# folco

./: .gitignore  BUILD.md  CMakeLists.txt  Cargo.toml  README.md  deny.toml  finish-tauri-updater-setup.md  scratch.md
.github/workflows/: app-ci.yml  ci.yml  release.yml
crates/folco-cli/: Cargo.toml
crates/folco-cli/src/: main.rs
crates/folco-core/: Cargo.toml
crates/folco-core/src/: cache.rs  context.rs  convert.rs  error.rs  folder_color.rs  lib.rs  progress.rs
crates/folco-core/src/sys/: linux.rs  macos.rs  mod.rs  windows.rs
crates/folco-model/: Cargo.toml
crates/folco-model/src/: folder_color.rs  lib.rs
crates/folco-renderer/: Cargo.toml
crates/folco-renderer-wasm/: .gitignore  Cargo.toml  LICENSE-MIT  README.md
crates/folco-renderer-wasm/.github/workflows/: ci.yml  release.yml
crates/folco-renderer-wasm/src/: canvas.rs  lib.rs  serializable.rs
crates/folco-renderer/src/: custom_customizer.rs  customizer.rs  error.rs  folder_color.rs  folder_customizer.rs  lib.rs  profile.rs
crates/folco-renderer/src/icon/: folder.rs  mod.rs
crates/folco-renderer/src/layer/: decal.rs  folder_color_target.rs  image_source.rs  mod.rs  overlay.rs  svg.rs
crates/folco-transfer/: Cargo.toml
crates/folco-transfer/src/: lib.rs
gui/: jsrepo.config.ts  package.json  svelte.config.js  vite.config.js
gui/src/: app.css  app.html
gui/src-tauri/: Cargo.toml  bundle-cli.json  tauri.conf.json
gui/src-tauri/capabilities/: default.json
gui/src-tauri/icons/: icon.icns
gui/src-tauri/src/: dto.rs  lib.rs  main.rs  state.rs
gui/src/lib/components/app/color-picker/: ColorPicker.svelte  index.ts
gui/src/lib/components/app/customization-option/: CustomizationOption.svelte  index.ts
gui/src/lib/components/app/directory-picker/: DirectoryPicker.svelte  index.ts
gui/src/lib/components/app/icon-preview/: IconPreview.svelte  index.ts
gui/src/lib/components/ui/button/: button.svelte
gui/src/lib/components/ui/dialog/: dialog-content.svelte
gui/src/lib/components/ui/emoji-picker/: emoji-picker-footer.svelte  emoji-picker-list.svelte  emoji-picker-search.svelte  emoji-picker-skin-tone-selector.svelte  emoji-picker-viewport.svelte  emoji-picker.svelte  emoji-picker.svelte.ts  index.ts  types.ts
gui/src/lib/hooks/: use-frecency.svelte.ts
gui/src/lib/stores/: renderer.svelte.ts  theme.svelte.ts
gui/src/lib/utils/: casing.ts  is-letter.ts
gui/src/routes/: +layout.svelte  +page.svelte
inc/: customizationmanager.h  dirlistwidget.h  iconutils.h  mainwindow.h  version.h.in
inc/macos/: macosiconutils.h
inc/windows/: winiconutils.h
installer/config/: config.xml
res/: folco.rc  macos_app_icon.icns
src/: customizationmanager.cpp  dirlistwidget.cpp  iconutils.cpp  main.cpp  mainwindow.cpp  mainwindow.ui
src/macos/: macosiconutils.mm
src/windows/: winiconutils.cpp
