[workspace]
resolver = "3"
members = [
    "crates/folco-core",
    "crates/folco-cli",
    "crates/folco-model",
    "crates/folco-renderer",
    "crates/folco-renderer-wasm",
    "gui/src-tauri",
]

# Shared dependencies. Members opt in with `<crate>.workspace = true`
# and may add crate-specific features on top.
[workspace.dependencies]
icon-sys = { git = "https://github.com/ecoates2/icon-sys.git", branch = "main" }
image = "0.25"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
