[package]
name = "folco-cli"
authors = ["Ethan Coates <ethancoates1567@gmail.com>"]
description = "An open-source, cross-platform application to customize folder icons"
version = "0.1.0"
edition = "2024"

[dependencies]
folco-core = { path = "../folco-core", features = ["clap", "jsonschema"] }
clap = { version = "4", features = ["derive"] }
indicatif = "0.17"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde_json.workspace = true
anyhow = "1"