[package]
name = "folco-renderer-wasm"
version = "0.1.0"
edition = "2024"
authors = ["Ethan Coates <ethancoates1567@gmail.com>"]
description = "WASM bindings for folco-renderer, enabling HTML canvas rendering in web environments"
license = "MIT OR Apache-2.0"
homepage= "https://github.com/ecoates2/folco-renderer-wasm"
repository = "https://github.com/ecoates2/folco-renderer-wasm"
readme = "README.md"
# Internal for now: built with wasm-pack and consumed by the GUI locally.
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["twemoji"]
twemoji = ["folco-renderer/twemoji"]

[dependencies]
folco-renderer = { path = "../folco-renderer", features = ["tsify"] }
wasm-bindgen = "0.2"
js-sys = "0.3"
serde.workspace = true
serde-wasm-bindgen = "0.6"
tsify-next = "0.5"

image.workspace = true

[dependencies.web-sys]
version = "0.3"
features = [
    "CanvasRenderingContext2d",
    "HtmlCanvasElement",
    "ImageData",
]