[package]
name = "folco-renderer"
version = "0.1.0"
edition = "2024"
publish = false

[features]
default = []
twemoji = ["dep:twemoji-assets"]
jsonschema = ["dep:schemars", "folco-model/jsonschema"]
clap = ["folco-model/clap"]

[dependencies]
folco-model = { path = "../folco-model" }
image.workspace = true
palette = "0.7"
resvg = "0.44"
schemars = { version = "0.8", optional = true }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
twemoji-assets = { version = "1.5", optional = true }
